--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.umeplanet.composesandbox">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposeSandbox">
         <activity
-            android:name=".MainActivity"
+            android:name=".LayoutsActivity2"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ComposeSandbox.NoActionBar">
